# LogLens

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
.zcode/plans/: plan-sess_8089270e-da8f-49f4-b422-d46a18dfbf25.md  plan-sess_c1b5226d-98ea-435a-82c1-4ea435708448.md
docs/: ARCHITECTURE.md  FEATURES.md  PROMOTION.md  README.md  ROADMAP.md  TECH_STACK.md
docs/superpowers/plans/: 2026-07-20-settings-page-optimization.md
docs/superpowers/specs/: 2026-07-20-settings-page-optimization-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  models.rs  paths.rs  updater.rs
src-tauri/src/ai/: client.rs  mod.rs  prompts.rs
src-tauri/src/cloud/: aliyun.rs  connector.rs  huawei.rs  huawei_sign.rs  mod.rs  tencent.rs
src-tauri/src/filter/: executor.rs  mod.rs  parser.rs
src-tauri/src/index/: engine.rs  mod.rs  schema.rs
src-tauri/src/mcp/: activity.rs  install.rs  mod.rs  protocol.rs  server.rs  tools.rs
src-tauri/src/parser/: custom_parser.rs  detector.rs  json_parser.rs  mod.rs  nginx_parser.rs
src-tauri/src/stats/: aggregator.rs  mod.rs
src-tauri/src/stream/: mod.rs  reader.rs
src/components/log/: LogRow.tsx  (+1 more)
src/contexts/: UpdateContext.tsx
src/hooks/: useAi.ts  useLogFile.ts  useLogLibraryCache.ts  useSearch.ts
src/pages/: McpPage.tsx  Settings.tsx  ToolsPage.tsx  Welcome.tsx  Workspace.tsx
src/types/: log.ts  mcp.ts
(+11 files in other folders)
