[package]
name = "loglens"
version = "0.4.0"
description = "LogLens - Local log analysis desktop tool"
authors = ["LogLens"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "loglens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.5", features = [ "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
sha2 = "0.10"
directories = "6.0.0"
serde_yaml = "0.9.34"
	clap = { version = "4.5.56", features = ["derive"] }
	regex = "1"
notify = "6"
tantivy = "0.22"
csv = "1.4"
once_cell = "1.20"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
